adds stuff and prod build for netlify

--- a/src/modules/footer/footer.scss
+++ b/src/modules/footer/footer.scss
@@ -6,7 +6,7 @@
 	flex-direction: column;
 	
 	.footer-text {
-		font-family: "Open sans";
+		//font-family: "Open sans";
 		color: #fff;
 		text-align: center;
 		font-weight: 400;
