--- a/src/modules/homepage/hero.scss
+++ b/src/modules/homepage/hero.scss
@@ -5,18 +5,21 @@
     justify-content: center;
 	height: calc(100vh - 68px);
 	h1 {
+		font-family: Roboto;
 		font-size: 6rem;
 		margin: 0;
-		color: #fff;
-		text-shadow: 1px 1px 0 #aaa, 2px 2px 0 #bbb, 3px 3px 0 #ccc, 4px 4px 0 #ddd, 5px 5px 0 #eee, 0 0 10px #ddd;
-		span:nth-child(1) {
-			letter-spacing: -4px
-		}
-		span:nth-child(2) {
-			letter-spacing: -6px
-		}
-		span:nth-child(3) {
-			letter-spacing: -10px
+		span {
+			padding: 0.6rem 1.1rem;
+			display: block;
+			background: #150583;
+			color: rgba(255,255,255,0.8);
+			line-height: 1;
+			border-bottom-right-radius: 1rem;
+			border-bottom-left-radius: 0;
+			border-top-right-radius: 1rem;
+			border-top-left-radius: 1rem;
+			box-shadow: 4px 4px 0 #2608e7, 8px 8px 0 #715df9, 12px 12px 0 #c7bffd;
+			text-shadow: 4px 4px 0 rgba(255, 255, 255, 0.3), 8px 8px 0 rgba(255, 255, 255, 0.2), 12px 12px 0 rgba(255, 255, 255, 0.1);
 		}
 	}
 	p{
