--- a/src/modules/homepage/hero.scss
+++ b/src/modules/homepage/hero.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
 	height: calc(100vh - 68px);
+	padding: 0 1rem;
 	img {
 		width: 120px;
 	}
@@ -14,5 +15,10 @@
 	}
 	p{
 		font-size: 1.25rem;
+		max-width: 500px;
+    	@media only screen and (min-width:440px){
+			text-indent: -96px;
+	    	padding-left: 96px;
+    	}
 	}
 }
